# projeto_itp_2024.2

./: .gitignore  CMakeLists.txt  EAN-8_code_extractor  EAN-8_code_extractor.c  EAN-8_code_generator  EAN-8_code_generator.c  Makefile  README.md  ext  gen  main.c
barcode-output/: 12321216.pbm  12321414.pbm  12341566.pbm  12341573.pbm  123aasd1.pbm  13123345.pbm  mama.pbm  sus.pbm  teste.pbm
include/: barcode.h  definitions.h  funcs.h  io.h
src/: EAN-8_code_extractor.c  EAN-8_code_generator.c  definitions.c  funcs.c  generatorNoValidation.c  identifier.c  io.c
